--- a/.gitignore
+++ b/.gitignore
@@ -2233,3 +2233,60 @@ Assets/_Prefabs/Weapons/WeaponSystem/Prefabs/Ammo.meta
 *.wav
 Assets/ghoul/objects/ghoul.fbx
 Assets/ghoul/objects/ghoulAnimator.controller
+Assets/Images/ImprovisedFence_1.png
+Assets/Lens Flares/35mm Lens.flare
+Assets/Lens Flares/6 Blade Aperture.flare
+Assets/Lens Flares/85mm Lens.flare
+Assets/Lens Flares/Art Assets/35mmflare.psd
+Assets/Lens Flares/Art Assets/85mmflare.psd
+Assets/Lens Flares/Art Assets/cheap plastic.psd
+Assets/Lens Flares/Art Assets/clearsun.psd
+Assets/Lens Flares/Art Assets/concert.psd
+Assets/Lens Flares/Art Assets/digicam.psd
+Assets/Lens Flares/Art Assets/halogen.psd
+Assets/Lens Flares/Art Assets/laser.psd
+Assets/Lens Flares/Art Assets/spacesun.psd
+Assets/Lens Flares/Art Assets/subtle.psd
+Assets/Lens Flares/Art Assets/weld.psd
+Assets/Lens Flares/Cheap Plastic Lens.flare
+Assets/Lens Flares/Cold Clear Sun.flare
+Assets/Lens Flares/Concert.flare
+Assets/Lens Flares/Digicam Lens.flare
+Assets/Lens Flares/Digital Camera.flare
+Assets/Lens Flares/Halogen Bulb.flare
+Assets/Lens Flares/Laser.flare
+Assets/Lens Flares/Subtle1.flare
+Assets/Lens Flares/Subtle2.flare
+Assets/Lens Flares/Subtle3.flare
+Assets/Lens Flares/Subtle4.flare
+Assets/Lens Flares/Sun (from space).flare
+Assets/Lens Flares/Welding.flare
+Assets/Other Assets/Fence1/zabor.3DS
+Assets/Other Assets/Fence1/zabor.max
+Assets/Other Assets/Fence1/zabor.obj
+Assets/_Prefabs/Building/FirstFence/Textures/Rusty Metal-068.jpg
+player_win_x64.pdb
+Assets/Other Assets/Fence1/zabor.mtl
+Assets/Other Assets/Fence2/Stena.max
+Assets/Other Assets/Fence2/stena.3DS
+Assets/Other Assets/Fence2/stena.mtl
+Assets/Other Assets/Fence2/stena.obj
+Assets/Other Assets/Fence3/wall.3DS
+Assets/Other Assets/Fence3/wall.max
+Assets/Other Assets/Fence3/wall.mtl
+Assets/Other Assets/Fence3/wall.obj
+Assets/Other Assets/Fence4/3ds file.3DS
+Assets/_Prefabs/Building/FirstFence/Textures/NORMALiron_panel_2_20131023_1456223059 1.jpg
+player_win_x64_s.pdb
+Assets/_Prefabs/Building/FirstFence/Textures/Rusty Metal-067.jpg
+Assets/_Prefabs/Building/FirstFence/Textures/corrugated_metal_4210094.JPG
+Assets/_Prefabs/Building/FirstFence/Textures/free-rusty-metal-texture-030.jpg
+Assets/_Prefabs/Building/FirstFence/Textures/metalPA090258.JPG
+Assets/Other Assets/House/3ds file.3DS
+Assets/Other Assets/House/MAX file.max
+Assets/_Prefabs/Building/FirstFence/ImprovisedFence_1.prefab
+Assets/_Prefabs/Building/FirstFence/Textures/7p.jpg
+Assets/_Prefabs/Building/FirstFence/Textures/metalPA090259.JPG
+Assets/_Prefabs/Building/FirstFence/Textures/rusty metal texture rippled iron steel wall stock photo.jpg
+Assets/_Prefabs/Building/FirstFence/Textures/undulating_rusty_iron_panel_1_20131023_1178397750.jpg
+Assets/_Prefabs/Building/FirstFence/Textures/undulating_rusty_iron_panel_2_20131023_1456223059.jpg
